package com.directi.training.dip.solution;

import java.io.IOException;

public interface Reader {
    String read() throws IOException;
}
