package com.directi.training.dip.solution;

import java.io.IOException;

public interface Writer {
    void write(String data) throws IOException;

}
